--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.15.3"
+    "sweetalert2": "^11.15.3",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
