--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-countdown-circle-timer": "^3.2.1",
     "react-datepicker": "^7.5.0",
